tests/reference/asr-data_implied_do3-831f843.stderr
semantic error: The start variable of the data implied do loop must be constants
 --> tests/errors/data_implied_do3.f90:5:21
  |
5 |     data(iarx(i), i=k, 3) / 1, 2, 3 /
  |                     ^ 
